# toy_lang_ocaml

./: .gitignore  .merlin  Makefile  README.md  branch.notes.txt  buildme  dune-project  show-conflicts  toy_lang.opam
lib/: check.ml  core.ml  dune  env.ml  infer.ml  lexer.mll  parser.mly  pretty.ml  resolve.ml  rewrite.ml  types.ml  util.ml
src/: ast.ml  core.ml  errors.ml  interp.ml  lexer.mll  parser.mly  pretty.ml  repl.ml  test.ml  types.ml  util.ml
src/toy/: .merlin  dune
test/: dune  test.ml  testUtil.ml
