name: "toy_lang"
opam-version: "2.0"
version: "1.0"
maintainer: ""
authors: ["David Lurton"]
homepage: "https://github.com/dlurton/toy_lang_ocaml"
bug-reports: "https://github.com/dlurton/toy_lang_ocaml/issues"
dev-repo: "git+https://github.com/dlurton/toy_lang_ocaml.git"
license: "Apache-2.0"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]

